# mcts-strength-variants

./: .gitignore  dataset.md  exec.sh  mcts-experiment.xlsx  pyproject.toml  run.py
.dvc/: config
best_solutions/: um-final-sub-1.ipynb
data/: cv.ipynb
data/results/: .gitignore  feat_importance_catboost_cv1.csv  feat_importance_catboost_cv1.csv.dvc  feat_importance_lightgbm_cv1.csv  feat_importance_lightgbm_cv1.csv.dvc  feat_importance_xgboost_cv1.csv  feat_importance_xgboost_cv1.csv.dvc  oof_catboost_cv1.csv.dvc  oof_catboost_cv1.parquet  oof_catboost_fsv23_cv1.parquet  oof_catboost_fsv2_cv1.parquet  (+260 more)
exploration/: feat_selection.ipynb  insights.ipynb
feat_selection/: feat_selection_intersection_at_95.json  feat_selection_intersection_at_96.json  feat_selection_intersection_at_97.json  feat_selection_intersection_at_98.json  feat_selection_intersection_at_99.json  feat_selection_union_at_80.json  feat_selection_union_at_85.json  feat_selection_union_at_90.json  feat_selection_union_at_95.json  lofo_lightgbm.csv  optuna_catb.ipynb  optuna_lgbm.ipynb  select_optuna_catb.json  select_optuna_combined_v23.json  select_optuna_combined_v24.json  select_optuna_combined_v34.json  select_optuna_lgbm.json  select_optuna_lgbm_v2.json  select_optuna_lgbm_v3.json
kaggle/: mcts-blend-bestCV.ipynb  mcts-blend-bestPL.ipynb  mcts-blend.ipynb  mcts-catboost-baseline.ipynb  mcts-catboost.ipynb  mcts-lightgbm-baseline.ipynb  mcts-lightgbm.ipynb  mcts-nn-1dcnn.ipynb  mcts-nn-gandalf.ipynb  mcts-nn-mlp.ipynb  mcts-xgboost-baseline.ipynb  mcts-xgboost.ipynb
preproc/: embeddings.ipynb
scripts/: download_kaggle_discussions.py
src/: preproc.py  preproc_kg.py  transformer.py
train/: blend.ipynb  catboost.ipynb  catboost_text.ipynb  dt-custom.ipynb  lightgbm-linear.ipynb  lightgbm.ipynb  mlp.ipynb  nn-1dcnn.ipynb  nn-autoint.ipynb  nn-excelformer.ipynb  nn-ft-transformer.ipynb  nn-gandalf.ipynb  nn-mlp.ipynb  nn-trompt.ipynb  xgboost.ipynb  xgboost_mo_bce.ipynb  xgboost_mo_mse.ipynb
tuning/: 1dcnn.db  1dcnn.ipynb  catboost_bayesian.db  catboost_bayesian.ipynb  lightgbm.db  lightgbm.ipynb  mlp.db  mlp.ipynb
utils/: memory.py  messaging.py
(+39 files in other folders)
