[tool.poetry]
name = "mcts-strength-variants"
version = "0.1.0"
description = ""
authors = ["mavillan <nallivam@gmail.com>"]
readme = "README.md"
packages = [{include = "mcts_strength_variants"}]

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.6.17"
pandas = "^2.2.2"
polars = "^1.7.1"
lightgbm = "^4.5.0"
xgboost = "^2.1.1"
catboost = "^1.2.7"
ipykernel = "^6.29.5"
category-encoders = "^2.6.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lofo-importance = "^0.3.4"
openai = "^1.46.1"
python-dotenv = "^1.0.1"
tiktoken = "^0.7.0"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"
lightning = "^2.4.0"
papermill = "^2.6.0"
typer = "^0.12.5"
seaborn = "^0.13.2"
optuna = "^4.0.0"
tensorflow = "^2.17.0"
tensorflow-metal = "^1.1.0"
cloudpickle = "3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
