[tool.poetry]
name = "mcts-strength-variants"
version = "0.1.0"
description = ""
authors = ["mavillan <nallivam@gmail.com>"]
readme = "README.md"
packages = [{include = "mcts_strength_variants"}]

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.6.17"
pandas = "^2.2.2"
polars = "^1.7.1"
lightgbm = "^4.5.0"
xgboost = "^2.1.1"
catboost = "^1.2.7"
ipykernel = "^6.29.5"
category-encoders = "^2.6.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lofo-importance = "^0.3.4"
openai = "^1.46.1"
python-dotenv = "^1.0.1"
tiktoken = "^0.7.0"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"
lightning = "^2.4.0"
papermill = "^2.6.0"
typer = "^0.12.5"
seaborn = "^0.13.2"
optuna = "^4.0.0"
cloudpickle = "3.0.0"
dill = "0.3.8"
colorama = "^0.4.6"
tensorflow-io-gcs-filesystem = {version = ">=0.23.1", markers = "python_version >= \"3.10\" and python_version < \"3.13\""}
tensorflow-macos = "2.15.0"
tensorflow-metal = "^1.1.0"
deeptables = "^0.2.6"
dask = {extras = ["dataframe"], version = "^2024.11.2"}
scikit-learn = "^1.3.0"
dvc = "^3.56.0"
dvc-ssh = "^4.1.1"
pytorch-tabular = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
